# Projeto_872

./: CMakeLists.txt  Doxyfile  README.md
assets/: config  savefile.json
deep_learning/: .matrix.cpp.swp  loss  loss.cpp  matrix  matrix.cpp
include/: Bloco.hpp
includes/: .MainController.hpp.swp  BlockPosition.hpp  Block_Positions.hpp  Bloco.hpp  Bolck_Position.hpp  Collision.hpp  ConfigReader.hpp  Container.hpp  Formato.hpp  IA.hpp  IAFunctions.hpp  Image.hpp  Keyboard.hpp  MainController.hpp  Map.hpp  Player.hpp  SDL_Model.hpp  Sprite.hpp  View.hpp
src/: .main.cpp.swp  client.cpp  main.cpp
src/Controller/: .BlockPosition.cpp.swp  .MainController.cpp.swp  BlockPosition.cpp  Collision.cpp  ConfigReader.cpp  IAFunctions.cpp  Keyboard.cpp  MainController.cpp
src/Model/: .Map.cpp.swp  Bloco.cpp  Container.cpp  Formato.cpp  IA.cpp  Image.cpp  Map.cpp  Player.cpp  SDL_Model.cpp  Sprite.cpp
src/View/: View.cpp
